<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    tools:context="com.example.footmatch.presentacion.MainRecycler">

    <LinearLayout
        android:id="@+id/linearLayoutLigas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPartidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <ImageButton
            android:id="@+id/ligaEASports"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:background="@drawable/liga_easports"
            android:src="@drawable/boton_liga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ligaPremier"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/liga_premier"
            android:src="@drawable/boton_liga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ligaSerieA"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/liga_seriea"
            android:src="@drawable/boton_liga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ligaBundesliga"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/liga_bundesliga"
            android:src="@drawable/boton_liga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view_matches_dates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLigas"
        app:layout_constraintBottom_toTopOf="@id/swiperefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu_matches_date" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_view_matches_dates">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPartidos"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_view_matches_dates"
            tools:ignore="MissingConstraints" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corners_navigation"
        app:itemActiveIndicatorStyle="@style/Theme.Material3.DynamicColors.DayNight"
        app:itemIconSize="70dp"
        app:itemTextAppearanceActive="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>