...
    <string name="action_settings">Settings</string>
    <string name="partidos_jugados">Partidos jugados</string>
    <string name="escudo_equipo_local_image_description">Escudo equipo local</string>
    <string name="escudo_equipo_visitante_image_description">escudo equipo visitante</string>
    <string name="yesterdayMatches">Ayer</string>
    <string name="todayMatches">Hoy</string>
    <string name="allMatches">Todos</string>
    <string name="teamDefaultLogo">https://cdn-icons-png.flaticon.com/128/8373/8373460.png</string>
    <string name="english">English</string>
    <string name="plantilla1">Plantilla del Barcelona</string>
    <string name="plantilla2">Plantilla del Real Madrid</string>
    <string name="plantillas">PLANTILLAS</string>
    <string name="trainer1">Entrenador: Xavi</string>
    <string name="trainer2">Entrenador: Ancelotti</string>
    <string name="argentina">Argentina</string>
    <string name="menu_refresh">Actualiza</string>
</resources>
