<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.favmovies.ShowMovie">

    <item
        android:id="@+id/navigation_stats"
        android:title="@string/stats" />

    <item
        android:id="@+id/navigation_alineations"
        android:title="@string/plantillas"/>

    <item
        android:id="@+id/navigation_referees"
        android:title="@string/referees"/>
</menu>
