<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.favmovies.ShowMovie">

    <item
        android:id="@+id/navigation_yesterday"
        android:title="@string/yesterdayMatches" />

    <item
        android:id="@+id/navigation_today"
        android:title="@string/todayMatches"/>

    <item
        android:id="@+id/navigation_all"
        android:title="@string/allMatches"/>

</menu>