...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Equipo 1 -->
    <LinearLayout
        android:id="@+id/equipo1Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Imagen del Equipo 1 -->
        <ImageView
            android:id="@+id/imagenEquipo1"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/trainer1"
            android:layout_width="wrap_content"
...
